kube/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
  labels: 
    istio-injection: enabled
