kube/api-server-dp-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-v2
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      version: v2
  template:
    metadata:
      labels:
        app: django
        version: v2
    spec:
      containers:
      - name: django
        image: my-django-image:latest  # Build your image and push to a registry
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
