kube/api-server-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-v1
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      version: v1
  template:
    metadata:
      labels:
        app: django
        version: v1
    spec:
      containers:
      - name: django
        image: my-django-image:latest  # Build your image and push to a registry
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
