kube/api-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: todo-app
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: django
