kube/frontend-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: my-nginx-image # Use your custom image here
          ports:
            - containerPort: 80
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: todo-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000 # Specify a NodePort or let Kubernetes assign one
  selector:
    app: nginx
